--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -547,6 +547,7 @@
                       </label>
                       <ng-select
                         [items]="districts"
+                        [minTermLength]="1"
                         bindValue="value"
                         [multiple]="isSell()"
                         [readonly]="isBuy()"
