--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -55,7 +55,7 @@
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link   fa fa-bell menu-notification-icon" routerLink="/notification">
-                            <span id="menu-notification-count" class="menu-notification-count rounded-circle"></span>
+                            <span id="menu-notification-count" style="display: none" class="menu-notification-count rounded-circle"></span>
                         </a>
                     </li>
                     <li class="nav-item dropdown">
