--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1039,7 +1039,7 @@
                         </ng-select>
                       </div>
                     </div>
-                    <div class="row" *ngIf="isApartment()">
+                    <div class="row">
                       <div class="col-sm"
                            [hidden]="hasShowGroup(['VIEW_SALE_OBJECT_INFO', 'VIEW_PURCHASE_OBJECT_INFO', 'UPDATE_SALE_OBJECT_INFO', 'UPDATE_PURCHASE_OBJECT_INFO'])">
                         <label class="form-label-v">Материал постройки</label>
