--- a/frontend/src/app/components/notification/notification.component.scss
+++ b/frontend/src/app/components/notification/notification.component.scss
@@ -34,7 +34,7 @@
 .notification-body {
   padding: 10px 0;
   margin-top: 5px;
-  max-width: 600px;
+  //max-width: 600px;
 }
 
 .td-id span {
@@ -84,4 +84,11 @@
 
 .pagination-wrapper {
   padding-top: 20px;
+}
+
+.answer_text {
+  border: 1px solid silver;
+  padding: 14px;
+  background-color: #fafafa;
+  border-radius: 3px;
 }
