--- a/frontend/src/app/components/detailing/detailing.component.html
+++ b/frontend/src/app/components/detailing/detailing.component.html
@@ -788,7 +788,7 @@
                     <td>
                       <span *ngIf="claim.phoneNumberAgent">+7 {{claim.phoneNumberAgent | mask: '(000) 000-0000'}}</span>
                     </td>
-                    <td>{{claim.price}}</td>
+                    <td>{{claimrice}}</td>
 
                     <td>{{claim.status.name.nameRu}}</td>
                     <td>{{claim.comment}}</td>
