--- a/frontend/src/app/components/staffs/staffs.component.html
+++ b/frontend/src/app/components/staffs/staffs.component.html
@@ -72,7 +72,7 @@
         </td>
         <td style="color: #00b2a8" class="text-left">{{user.name}} {{user.surname}}</td>
         <td class="contact-info">
-          <span *ngIf="user.phone">+7 {{user.phone | mask: '(000) 000-0000'}}</span>
+          <span *ngIf="user.phone">+7 {{user.phone | mask: '0000000000'}}</span>
           <br/>
           <span class="font-weight-bolder">{{user.email}}</span>
         </td>
@@ -146,7 +146,7 @@
     <div class="col-sm">
       <label class="col-sm col-form-label">Контакты<span class="text-danger">&nbsp;*</span></label>
       <input type="text" [disabled]="isEdit" class="col-sm form-control" name="phone"
-             prefix="+7" mask=' (000) 000-0000' [showMaskTyped]="true" placeHolderCharacter="0"
+             prefix="+7" mask=' 0000000000' [showMaskTyped]="true" placeHolderCharacter="0"
              [(ngModel)]="formData.phone">
     </div>
     <div class="col-sm">
