--- a/frontend/src/app/components/dic-control/dic-control.component.html
+++ b/frontend/src/app/components/dic-control/dic-control.component.html
@@ -29,7 +29,27 @@
               <i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
           </div>
 
+
+
+
           <div style="border: solid 1px black; padding: 5px;overflow: auto;">
+            <div class="row" style=" margin: 20px">
+              <div class="col-sm-8">
+                <input class="form-control fa" type="text" [(ngModel)]="searchHouseName"
+                       placeholder="&#xf002; Поиск ЖК по наименованию"
+                       aria-label="Search">
+              </div>
+              <div class="col-sm-4">
+                <mat-button-toggle-group class="float-right">
+                  <mat-button-toggle class="all-users" (click)="getByHouseName()">
+                    Поиск
+                  </mat-button-toggle>
+                  <mat-button-toggle class="all-users" (click)="clearSearch()">
+                    Очистить
+                  </mat-button-toggle>
+                </mat-button-toggle-group>
+              </div>
+            </div>
             <table *ngIf="resident" class="table table-bordered text-center">
               <thead class="text-center">
               <tr>
