--- a/frontend/src/app/components/dic-control/dic-control.component.scss
+++ b/frontend/src/app/components/dic-control/dic-control.component.scss
@@ -1,3 +1,16 @@
 .rowBlue{
   background:aliceblue;
 }
+.all-users {
+  border-radius: 0.3125rem;
+  margin-right: 0.3125rem;
+  border: 2px solid #00b2a8;
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.56;
+  letter-spacing: normal;
+  text-align: left;
+  color: #00b2a8;
+}
