--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -71,3 +71,10 @@ a, a:active {
   z-index: 1;
   left: 70px;
 }
+
+.sidebar__logo {
+  margin: 0 auto;
+  max-width: 200px;
+  max-height: 180px;
+  cursor: pointer;
+}
