--- a/frontend/src/app/helpers/nav/nav.component.html
+++ b/frontend/src/app/helpers/nav/nav.component.html
@@ -55,9 +55,8 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right dropdown-default"
              aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" (click)="dnHref('profile')" translate>profile.myProfile</a>
-          <hr/>
-          <a class="dropdown-item" (click)="logout()" translate>profile.exit</a>
+          <a class="dropdown-item" (click)="dnHref('profile')" translate>profile.myProfile</a><hr/>
+          <a class="dropdown-item" (click)="logout()" translate>profile.logout</a>
         </div>
       </li>
     </ul>
