--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -14,7 +14,7 @@
 
 body {
   height: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat';
   background-color: #ebedf0 !important
 }
 
