--- a/frontend/src/app/components/login/change-password/change-password.component.html
+++ b/frontend/src/app/components/login/change-password/change-password.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="input-group mb-3">
     <input type="password" class="form-control" placeholder="Новый пароль"
-           aria-describedby="basic-addon2" formControlName="currentPassword" #newPassword>
+           aria-describedby="basic-addon2" formControlName="newPassword" #newPassword>
     <div class="input-group-append">
       <a class="input-group-text" id="basic-addon2"
          (click)="newPassword.type = newPassword.type == 'password' ? 'text' : 'password'">
@@ -25,7 +25,7 @@
   </div>
   <div class="input-group mb-3">
     <input type="password" class="form-control" placeholder="Подтверждение пароля"
-           aria-describedby="basic-addon3" formControlName="currentPassword" #confirmPassword>
+           aria-describedby="basic-addon3" formControlName="confirmationPassword" #confirmPassword>
     <div class="input-group-append">
       <a class="input-group-text" id="basic-addon3"
          (click)="confirmPassword.type = confirmPassword.type == 'password' ? 'text' : 'password'">
@@ -37,7 +37,7 @@
   <button class="btn btn-default my-4">
     Отменить
   </button>
-  <button class="btn btn-info my-4">
+  <button class="btn btn-info my-4" (click)="changePassword()">
     Изменить пароль
   </button>
 </div>
