--- a/frontend/src/app/components/login/change-password/change-password.component.html
+++ b/frontend/src/app/components/login/change-password/change-password.component.html
@@ -34,7 +34,7 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-default my-4">
+  <button class="btn btn-default my-4" (click)="close()">
     Отменить
   </button>
   <button class="btn btn-info my-4" (click)="changePassword()">
