--- a/frontend/src/app/components/staffs/staffs.component.html
+++ b/frontend/src/app/components/staffs/staffs.component.html
@@ -146,7 +146,7 @@
     <div class="col-sm">
       <label class="col-sm col-form-label">Контакты<span class="text-danger">&nbsp;*</span></label>
       <input type="text" [disabled]="isEdit" class="col-sm form-control" name="phone"
-             prefix="+7" mask=' 0000000000' [showMaskTyped]="true" placeHolderCharacter="0"
+             prefix="+7" mask=' (000)0000000' [showMaskTyped]="true" placeHolderCharacter="0"
              [(ngModel)]="formData.phone">
     </div>
     <div class="col-sm">
